--- a/.github/workflows/manual_stock_update.yml
+++ b/.github/workflows/manual_stock_update.yml
@@ -21,6 +21,10 @@ jobs:
           python -m pip install --upgrade pip
           pip install -r requirements.txt
 
+      - name: Fix chromedriver permissions
+        run: |
+          chmod +x $(find /home/runner/.wdm/ -name chromedriver)
+
       - name: Run stock update script
         env:
           SHOPIFY_ACCESS_TOKEN: ${{ secrets.SHOPIFY_ACCESS_TOKEN }}
